Change first slide and stop overflow setup

--- a/assets/sass/components/_slide.scss
+++ b/assets/sass/components/_slide.scss
@@ -1,5 +1,7 @@
 .c_slide-container {
   position: relative;
+  overflow: hidden;
+  width: 100%;
 }
 
 
@@ -72,7 +74,7 @@
       background-attachment: fixed;
     }
 
-    $slides: brewery tea-box tea-fields1 tea-fields2 tea-burnt tea-picker metal-building glass1 glass2 glass3 glass4 lockers grapes mary restaurant1 restaurant2 we-care;
+    $slides: brewery tea-box tea-fields1 tea-fields2 tea-burnt tea-picker metal-building glass1 glass2 glass3 glass4 lockers grapes mary restaurant1 restaurant2 restaurant3 we-care;
 
     @each $slide in $slides {
       .c_slide--#{$slide} & { background-image: url("../img/bg/#{$slide}.jpg"); }
